update source cod for OPT
Signed-off-by: William <ico@wcme.io>

--- a/wap/tmpl/article_show.html
+++ b/wap/tmpl/article_show.html
@@ -36,6 +36,6 @@
 <script type="text/javascript" src="../js/template.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
 <script type="text/javascript" src="../js/tmpl/article_show.js"></script>
-<script type="text/javascript" src="../js/tmpl/footer.js"></script
+<script type="text/javascript" src="../js/tmpl/footer.js"></script>
 </body>
 </html>
